--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+// @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@300,400;500;700&display=swap");
 html,
 body {
   padding: 0;
@@ -11,6 +12,17 @@ a {
   text-decoration: none;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
